# cpp_project_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
application/: CMakeLists.txt
cmake/: create_documents.cmake
module/: CMakeLists.txt
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
